# bevy_wizard_battles

./: Cargo.toml  README.md  windows.sh
.cargo/: config.toml
src/: components.rs  input.rs  main.rs
