[package]
name = "bevy_wizard_battles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
#bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_ggrs = { version = "0.15", features = ["wasm-bindgen"]}
bevy_matchbox = { version = "0.9", features = ["ggrs"]}
bevy_asset_loader = "0.20"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
